--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "background_color": "#ffffff",
   "display": "standalone",
-  "theme_color": "#000000"
+  "theme_color": "#ffffff"
 }
